fix: adding stylings back to the pfe-card demo and adding spacing for the buttons

--- a/elements/pfe-card/demo/demo.css
+++ b/elements/pfe-card/demo/demo.css
@@ -2,3 +2,6 @@ body {
   margin: 2em;
 }
 
+pfe-button {
+  margin-inline: 0.5em;
+}
